[T] Test setPrivateField()